template-infra-mlm2/CFT/outil_cft/network_outil.yml
AWSTemplateFormatVersion: 2010-09-09
Description: "Network for CICD tools"
Parameters:  
  PrivateSubnetToolsCdir:
    Type: String

Resources: 
  PrivateSubnetTools:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnetToolsCdir
      Tags:
        - Key: Name
          Value: PrivateSubnetTools-mlm

  PrivateToolsRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: PrivateToolsRouteTable-mlm

  PrivateToolsRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
      RouteTableId: !Ref PrivateToolsRouteTable

  PrivateSubnetToolsRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateToolsRouteTable
      SubnetId: !Ref PrivateSubnetTools
    DependsOn: PrivateToolsRouteTable

  PrivateTools2PrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: PrivateTools2PrivateRouteTable-mlm

  PrivateTools2PrivateRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateTools2PrivateRouteTable

  PrivateSubnetTools2PrivateRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateTools2PrivateRouteTable
      SubnetId: !Ref PrivateSubnet
    DependsOn: PrivateTools2PrivateRouteTable

  privateToolsSecGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: PrivateToolsSecureGroup-mlm
      GroupDescription: private security group rules for tools
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 172.30.0.0/24
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: PrivateToolsSecurityGrp-mlm

Outputs:

  PrivateSubnetToolsID:
    Description: The subnet ID to use for tools
    Value: !Ref PrivateSubnetTools
    Export:
      Name: !Sub 'PrivateSubnetToolsID-mlm'

  privateToolsSecGroupID:
    Description: The security group ID to use for tools
    Value: !GetAtt 
      - privateToolsSecGroup
      - GroupId
    Export:
      Name: !Sub 'privateToolsSecGroupID-mlm'
