template-infra-mlm2/CFT/outil_cft/network_tools.yml
AWSTemplateFormatVersion: 2010-09-09

Description: "Network for CICD tools"

Parameters:  

  PublicSubnetToolsCidr:
    Type: String

  LoadBalancerSubnetToolsCidr:
    Type: String

  PrivateSubnetToolsCidr: 
    Type: String

Resources: 

  VPCTools:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 172.30.1.0/24
      Tags:
        - Key: Name
          Value: VPCTools-mlm

  EIPTools:
    Type: 'AWS::EC2::EIP'
    DependsOn: PublicSubnetTools

  PublicSubnetTools:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPCTools
      AvailabilityZone: us-east-1a
      CidrBlock: !Ref PublicSubnetToolsCidr
      MapPublicIpOnLaunch: yes
      Tags:
        - Key: Name
          Value: PublicSubnetTools-mlm
    DependsOn: VPCTools

  LoadBalancerSubnetTools:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPCTools
      AvailabilityZone: us-east-1b
      CidrBlock: !Ref LoadBalancerSubnetToolsCidr
      Tags:
        - Key: Name
          Value: LoadBalancerSubnetTools-mlm
    DependsOn: VPCTools

  PrivateSubnetTools:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPCTools
      CidrBlock: !Ref PrivateSubnetToolsCidr
      Tags:
        - Key: Name
          Value: PrivateSubnetTools-mlm

  InternetGatewayTools:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: InternetGatewayTools-mlm
    DependsOn: VPCTools

  NatGatewayTools:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt 
        - EIPTools
        - AllocationId
      SubnetId: !Ref PublicSubnetTools
      Tags:
        - Key: Name
          Value: NatGatewayTools-mlm
    DependsOn: EIPTools

  VPCGatewayAttachmentTools:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref InternetGatewayTools
      VpcId: !Ref VPCTools

  PublicRouteTableTools:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPCTools
      Tags:
        - Key: Name
          Value: PublicRouteTableTools-mlm

  LoadBalancerRouteTableTools:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPCTools
      Tags:
        - Key: Name
          Value: LoadBalancerRouteTableTools-mlm

  PrivateRouteTableTools:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPCTools
      Tags:
        - Key: Name
          Value: PrivateRouteTableTools-mlm

  PublicRouteTools:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGatewayTools
      RouteTableId: !Ref PublicRouteTableTools

  LoadBalancerRouteTools:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGatewayTools
      RouteTableId: !Ref LoadBalancerRouteTableTools

  PrivateRouteTools:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayTools
      RouteTableId: !Ref PrivateRouteTableTools
      
  PeeringRouteTools:
  Type: AWS::EC2::Route
  Properties:
    DestinationCidrBlock: 172.30.0.0/24
    RouteTableId: !Ref PrivateRouteTableTools
    VpcPeeringConnectionId: !Ref VPCPeeringConnection
    
  PeeringRouteBastion:
  Type: AWS::EC2::Route
  Properties:
    DestinationCidrBlock: 172.30.0.0/24
    RouteTableId: !Ref PublicRouteTableTools
    VpcPeeringConnectionId: !Ref VPCPeeringConnection

  PublicSubnetRouteTableAssociationTools:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTableTools
      SubnetId: !Ref PublicSubnetTools
    DependsOn: PublicRouteTableTools

  LoadBalancerSubnetRouteTableAssociationTools:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref LoadBalancerRouteTableTools
      SubnetId: !Ref LoadBalancerSubnetTools
    DependsOn: LoadBalancerRouteTableTools

  PrivateSubnetRouteTableAssociationTools:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRouteTableTools
      SubnetId: !Ref PrivateSubnetTools
    DependsOn: PrivateRouteTableTools

  PublicSecurityGroupTools:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: PublicSecurityGroupTools-mlm
      GroupDescription: public security group rules
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      VpcId: !Ref VPCTools
      Tags:
        - Key: Name
          Value: PublicSecurityGroupTools-mlm

  PrivateSecurityGroupTools:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: PrivateSecurityGroupTools-mlm
      GroupDescription: private security group rules for tools
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 172.30.0.0/24,172.30.1.0/24
      VpcId: !Ref VPCTools
      Tags:
        - Key: Name
          Value: PrivateSecurityGroupTools-mlm

  LoadBalancerSecurityGroupTools:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: LoadBalancerSecurityGroupTools-mlm
      GroupDescription: loadbalancer security group rules
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      VpcId: !Ref VPCTools
      Tags: 
        -
          Key: Name
          Value: LoadBalancerSecurityGroupTools-mlm
          
  VPCPeeringConnection:  
    Type: AWS::EC2::VPCPeeringConnection
    Properties: 
      PeerVpcId: !Ref VPCIDProd-mlm
      Tags:
        - Key: Name
          Value: VpcPeeringConnection-mlm
      VpcId: !Ref VPCTools

Outputs:

  VPCIDTools:
    Description: VPCIDTools
    Value: !Ref VPCTools
    Export:
      Name: !Sub VPCIDTools-mlm

  PublicSubnetIDTools:
    Description: The subnet ID to use for public web servers
    Value: !Ref PublicSubnetTools
    Export:
      Name: !Sub PublicSubnetIDTools-mlm

  LoadBalancerSubnetIDTools:
    Description: The subnet ID to use for public web servers
    Value: !Ref LoadBalancerSubnetTools
    Export:
      Name: !Sub LoadBalancerSubnetIDTools-mlm

  PrivateSubnetIDTools:
    Description: The subnet ID to use for public web servers
    Value: !Ref PrivateSubnetTools
    Export:
      Name: !Sub PrivateSubnetIDTools-mlm

  PublicSecurityGroupIDTools:
    Description: The security group ID to use for public web servers
    Value: !GetAtt 
      - PublicSecurityGroupTools
      - GroupId
    Export:
      Name: !Sub PublicSecurityGroupIDTools-mlm
  
  LoadBalancerSecurityGroupIDTools:
    Description: The security group ID to use for public web servers
    Value: !GetAtt 
      - LoadBalancerSecurityGroupTools
      - GroupId
    Export:
      Name: !Sub LoadBalancerSecurityGroupIDTools-mlm

  PrivateSecurityGroupIDTools:
    Description: The security group ID to use for public web servers
    Value: !GetAtt 
      - PrivateSecurityGroupTools
      - GroupId
    Export:
      Name: !Sub PrivateSecurityGroupIDTools-mlm
